<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.menu.MainActivity">
    <item
        android:id="@+id/op_tamanho"
        android:title="@string/size">
        <menu>
            <item
                android:id="@+id/op_small"
                android:title="@string/small"/>
            <item
                android:id="@+id/op_medium"
                android:title="@string/medium"/>
            <item
                android:id="@+id/op_large"
                android:title="@string/large"/>
        </menu>
    </item>
    <item
        android:id="@+id/op_tema"
        android:title="@string/tema"/>
    <item
        android:id="@+id/op_exclui"
        android:title="@string/exclui">
        <menu>
            <item
                android:id="@+id/op_confirma"
                android:title="@string/confirma"/>
        </menu>
    </item>
    <item
        android:id="@+id/op_sair"
        android:title="@string/sair"
        android:icon="@drawable/ic_exit_to_app_24dp"
        app:showAsAction="always"/>
</menu>